[gd_scene load_steps=16 format=3 uid="uid://cki8q0nelsrsa"]

[ext_resource type="Script" uid="uid://ddkni61nd80vt" path="res://sprites/Hana Caraka - Topdown Tileset/Hana Caraka - Topdown Tileset/House/main.gd" id="1_e6bbw"]
[ext_resource type="PackedScene" uid="uid://cawg1tq3uaqq7" path="res://sprites/Hana Caraka - Topdown Tileset/Hana Caraka - Topdown Tileset/House/backgrounds.tscn" id="1_gp34s"]
[ext_resource type="PackedScene" uid="uid://buts4ehxirrur" path="res://sprites/Hana Caraka - Topdown Tileset/Hana Caraka - Topdown Tileset/House/player.tscn" id="2_ovlaj"]
[ext_resource type="PackedScene" uid="uid://chqgfuqs3wn4q" path="res://Inventory/inventory.tscn" id="3_ovlaj"]
[ext_resource type="Script" uid="uid://c1uydoq5x125w" path="res://Inventory/inventory_interface.gd" id="4_38uab"]
[ext_resource type="PackedScene" uid="uid://bpfmoo7pgcvyl" path="res://Inventory/slot.tscn" id="6_38uab"]
[ext_resource type="PackedScene" uid="uid://for0vksr8o2l" path="res://interactable/chest.tscn" id="7_gm00o"]
[ext_resource type="PackedScene" uid="uid://cy1g05gn51fat" path="res://Inventory/hot_bar_inventory.tscn" id="7_m1s1m"]
[ext_resource type="Script" uid="uid://b3nysasbdcim0" path="res://Inventory/inventory_data.gd" id="8_is2om"]
[ext_resource type="Script" uid="uid://cn3th1d7ure5w" path="res://Inventory/slot_data.gd" id="9_80jm0"]
[ext_resource type="Resource" uid="uid://cfc1qluqw46nv" path="res://Item/items/seeds.tres" id="10_80jm0"]
[ext_resource type="PackedScene" uid="uid://cdi6471witlxy" path="res://Item/pick_up/pick_up.tscn" id="11_a6xtv"]

[sub_resource type="Resource" id="Resource_m1s1m"]
script = ExtResource("9_80jm0")
item_data = ExtResource("10_80jm0")
quantity = 5
metadata/_custom_type_script = "uid://cn3th1d7ure5w"

[sub_resource type="Resource" id="Resource_a6xtv"]
script = ExtResource("8_is2om")
slot_datas = Array[ExtResource("9_80jm0")]([SubResource("Resource_m1s1m"), null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null])
metadata/_custom_type_script = "uid://b3nysasbdcim0"

[sub_resource type="Resource" id="Resource_kyfyo"]
script = ExtResource("9_80jm0")
item_data = ExtResource("10_80jm0")
metadata/_custom_type_script = "uid://cn3th1d7ure5w"

[node name="Game" type="Node2D"]
script = ExtResource("1_e6bbw")
metadata/_edit_horizontal_guides_ = [-66.0]

[node name="Player" parent="." instance=ExtResource("2_ovlaj")]
position = Vector2(241, 144)

[node name="Backgrounds" parent="." instance=ExtResource("1_gp34s")]

[node name="UI" type="CanvasLayer" parent="."]

[node name="InventoryInterface" type="Control" parent="UI"]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("4_38uab")
metadata/_edit_use_anchors_ = true

[node name="BackgrounDetector" type="Control" parent="UI/InventoryInterface"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -565.0
offset_top = -313.0
offset_right = -407.0
offset_bottom = -233.0
grow_horizontal = 2
grow_vertical = 2

[node name="PlayerInventory" parent="UI/InventoryInterface" instance=ExtResource("3_ovlaj")]
layout_mode = 0
offset_left = 10.0
offset_top = 10.0
offset_right = 90.0
offset_bottom = 90.0
mouse_filter = 2
metadata/_edit_use_anchors_ = true

[node name="ExternalInventory" parent="UI/InventoryInterface" instance=ExtResource("3_ovlaj")]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.8914931
anchor_top = -0.0015432099
anchor_right = 0.8914931
anchor_bottom = -0.0015432099
offset_left = -227.0
offset_top = 11.0
offset_right = -147.0
offset_bottom = 91.0
mouse_filter = 2
metadata/_edit_use_anchors_ = true

[node name="GrabbedSlot" parent="UI/InventoryInterface" instance=ExtResource("6_38uab")]
modulate = Color(1, 1, 1, 0.49019608)
self_modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_right = 64.0
offset_bottom = 64.0
mouse_filter = 2

[node name="HotBarInventory" parent="UI" instance=ExtResource("7_m1s1m")]
offset_left = 10.0
offset_top = 10.0
offset_right = 50.0
offset_bottom = 50.0

[node name="Chest" parent="." instance=ExtResource("7_gm00o")]
position = Vector2(182, 111)
chest_inventory = SubResource("Resource_a6xtv")

[node name="PickUp" parent="." instance=ExtResource("11_a6xtv")]
position = Vector2(166, 127)
slot_data = SubResource("Resource_kyfyo")

[connection signal="gui_input" from="UI/InventoryInterface/BackgrounDetector" to="UI/InventoryInterface" method="_on_backgroun_detector_gui_input"]
